fixed image centering when product modal is open on mobile

--- a/src/components/ProductModal/ProductModal.less
+++ b/src/components/ProductModal/ProductModal.less
@@ -99,6 +99,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0;
+    margin: 0;
   }
 
   &__image {
@@ -108,7 +110,10 @@
     height: auto;
     object-fit: contain;
     display: block;
-    margin: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   // Type-specific image styling
